# dynamic_trajectory_generator

./: .gitignore  .vimspector.json  CMakeLists.txt  README.md  package.xml
include/: dynamic_trajectory.hpp  dynamic_trajectory_v2.cpp  dynamic_waypoint.hpp  logging_utils.hpp  thread_safe_trajectory.hpp  trajectory_generator.hpp  trajectory_publisher.hpp
include/dynamic_trajectory_generator/: dynamic_trajectory.hpp  dynamic_trajectory_v2.cpp  dynamic_waypoint.hpp  thread_safe_trajectory.hpp
include/dynamic_trajectory_generator/utils/: logging_utils.hpp  plotting_utils.hpp  traj_modifiers.hpp
include/utils/: logging_utils.hpp  plotting_utils.hpp  traj_modifiers.hpp
previous/include/: eth_traj_wrapper.hpp  trajectory_publisher.hpp
previous/src/: eth_traj_wrapper.cpp  main_trajectory_publisher.cpp  trajectory_publisher.cpp
src/: dynamic_trajectory.cpp  dynamic_trajectory_BACKUP_30097.cpp  dynamic_trajectory_BASE_30097.cpp  dynamic_trajectory_REMOTE_30097.cpp  dynamic_waypoint.cpp  eth_traj_wrapper.cpp  trajectory_generator.cpp  trajectory_publisher.cpp
subpackages/matplotlib_cpp/: CMakeLists.txt  matplotlibcpp.h
subpackages/mav_trajectory_generation/: CMakeLists.txt  package.xml
subpackages/mav_trajectory_generation/cmake_dependencies/: glog_dependencies.cmake  nlopt_dependencies.cmake
subpackages/mav_trajectory_generation/include/mav_msgs/: common.hpp  eigen_mav_msgs.hpp
subpackages/mav_trajectory_generation/include/mav_trajectory_generation/: trajectory_sampling.h
subpackages/mav_trajectory_generation/src/: vertex.cpp
subpackages/mav_trajectory_generation/test/: test_polynomial.cpp
tests/: CMakeLists.txt  compilation_tests.cpp  plot_results.py  profiling_cmake.cmake  taylor_series_vs_exp_benchmark.cpp  traj_evaluator.hpp  trajectory_test.cpp
